--- a/TpFinalNivel3_Arteaga_Ponssa_Lucas/MasterPrincipal.Master
+++ b/TpFinalNivel3_Arteaga_Ponssa_Lucas/MasterPrincipal.Master
@@ -8,32 +8,73 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <link href="Style/Styles.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<style>
+    body{
+       background-color:darkgrey;
+    }
+    footer{
+        text-align:center;
+        background-color:#6c757d;
+    }
+</style>
 </head>
 <body>
-    <header>
-        <nav  class="navbar navbar-expand-lg  bg-primary" data-bs-theme="dark" >
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link" href="#">Features</a>
-                        <a class="nav-link" href="#">Pricing</a>
+    <form id="form1" runat="server">
+        <header>
+            <nav class="navbar navbar-expand-lg  bg-body-tertiary" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="Default.aspx">Logo</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="Default.aspx">Home</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="d-flex">
+
+                        <%if (negocio.Seguridad.esAdmin(Session["trainee"]))
+                            {%>
+                        <a class="btn" href="ListarArticulo.aspx">Lista de Articulos</a>
+                        <%}
+
+                        %>
+                        <%if ((Session["trainee"] == null))
+                            { %>
+
+                        <div class="d-flex"><a class="btn btn-success" href="Login.aspx">Loguearse</a></div>
+                        <div class="d-flex"><a class="btn btn-primary " href="Registro.aspx">Registrarse</a></div>
+
+
+                        <%} %>
+
+                        <%if ((Session["trainee"] != null))
+                            { %>
+                        <asp:Button runat="server" ID="btnMiPerfil" OnClick="btnMiPerfil_Click" Text="Mi Perfil" CssClass="btn" />
+                        <asp:Button runat="server" ID="btnCerrarSesion" CssClass="btn" Text="Cerrar Sesion" OnClick="btnCerrarSesion_Click" />
+                        <asp:Image runat="server" ID="imgAvatar" Style="height: 40px; width: 40px; border-radius: 50%;" />
+                        <asp:Label ID="lblUser" Text="user" CssClass="text-light m-auto me-2" runat="server" />
+                        <%} %>
                     </div>
                 </div>
+            </nav>
+        </header>
+        <div class="container">
+            <div>
+                <hr />
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
             </div>
-        </nav>
-    </header>
-    <form id="form1" runat="server">
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
         </div>
     </form>
+    <br />
+    <footer data-bs-theme="dark">Gracias por la visita! </footer>
 </body>
+    
 </html>
