--- a/TpFinalNivel3_Arteaga_Ponssa_Lucas/MasterPrincipal.Master
+++ b/TpFinalNivel3_Arteaga_Ponssa_Lucas/MasterPrincipal.Master
@@ -8,18 +8,10 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-    <link href="Style/Styles.css" rel="stylesheet"/>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<style>
-    body{
-       background-color:darkgrey;
-    }
-    footer{
-        text-align:center;
-        background-color:#6c757d;
-    }
-</style>
+    <link href="Style\Styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <form id="form1" runat="server">
@@ -69,6 +61,7 @@
             <div>
                 <hr />
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+
                 </asp:ContentPlaceHolder>
             </div>
         </div>
