--- a/TpFinalNivel3_Arteaga_Ponssa_Lucas/MasterPrincipal.Master
+++ b/TpFinalNivel3_Arteaga_Ponssa_Lucas/MasterPrincipal.Master
@@ -8,24 +8,31 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="Style\Styles.css" rel="stylesheet" type="text/css"/>
+    <link href="Style\Styles.css" rel="stylesheet" type="text/css" />
+    <style>
+        footer {
+            text-align: center;
+            color: white;
+            background: #2B3035;
+        }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
         <header>
             <nav class="navbar navbar-expand-lg  bg-body-tertiary" data-bs-theme="dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="Default.aspx">Logo</a>
+                    <a class="navbar-brand" href="Default.aspx">LucArt</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="Default.aspx">Home</a>
+                                <a class="nav-link active" aria-current="page" href="Default.aspx">Catálogo</a>
                             </li>
                         </ul>
                     </div>
@@ -39,9 +46,13 @@
                         %>
                         <%if ((Session["trainee"] == null))
                             { %>
+                        <div>
+                            <a class="btn btn-success me-4" href="Login.aspx">Loguearse</a>
+                        </div>
+                        <div>
 
-                        <div class="d-flex"><a class="btn btn-success" href="Login.aspx">Loguearse</a></div>
-                        <div class="d-flex"><a class="btn btn-primary " href="Registro.aspx">Registrarse</a></div>
+                            <a class="btn btn-primary " href="Registro.aspx">Registrarse</a>
+                        </div>
 
 
                         <%} %>
@@ -61,13 +72,12 @@
             <div>
                 <hr />
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-
                 </asp:ContentPlaceHolder>
             </div>
         </div>
     </form>
     <br />
-    <footer data-bs-theme="dark">Gracias por la visita! </footer>
+    <footer>Gracias por la visita! </footer>
 </body>
-    
+
 </html>
