--- a/TpFinalNivel3_Arteaga_Ponssa_Lucas/Style/Styles.css
+++ b/TpFinalNivel3_Arteaga_Ponssa_Lucas/Style/Styles.css
@@ -3,10 +3,6 @@
 label{
     color:white;
 }
-footer{
-    text-align:center;
-    background:red;
-}
 /*esto en la Default*/ 
 #imgEstilo {
     height: 500px;
@@ -17,7 +13,30 @@ footer{
 body{
        background-color:darkgrey;
     }
-footer{
-    text-align:center;
-    background-color:#6c757d;
+#footer {
+    text-align: center;
+    background: #212529;
 }
+#Logo{
+    color:red;
+}
+.btn-bd-primary {
+    --bs-btn-font-weight: 600;
+    --bs-btn-color: var(--bs-white);
+    --bs-btn-bg: var(--bd-violet-bg);
+    --bs-btn-border-color: var(--bd-violet-bg);
+    --bs-btn-hover-color: var(--bs-white);
+    --bs-btn-hover-bg: #{shade-color($bd-violet, 10%)};
+    --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
+    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+    --bs-btn-active-color: var(--bs-btn-hover-color);
+    --bs-btn-active-bg: #{shade-color($bd-violet, 20%)};
+    --bs-btn-active-border-color: #{shade-color($bd-violet, 20%)};
+}
+/*esto esta en la pagina de detalle*/ 
+
+#informacion {
+    background-color: #6c757d;
+    color: white;
+}
+
